--- a/produtos/templates/listagem_servicos.html
+++ b/produtos/templates/listagem_servicos.html
@@ -8,7 +8,7 @@
         </div>
         <ul>
         {% for servico in servico_do_vendedor.servicos %}
-            <li> {{ servico.nome }} - R$ {{ servico.preco }}<li> <a href="{{ servico.id }}">Ver detalhes</a>
+            <li> {{ servico.nome }} - R$ {{ servico.preco }}<li>    
         {% endfor %}
         </ul>
     {% endfor %}
