--- a/produtos/templates/listagem_servicos.html
+++ b/produtos/templates/listagem_servicos.html
@@ -8,8 +8,9 @@
         </div>
         <ul>
         {% for servico in servico_do_vendedor.servicos %}
-            <li> {{ servico.nome }} - R$ {{ servico.preco }}<li>    
+            <li> {{ servico.nome }} - R$ {{ servico.preco }}</li> 
         {% endfor %}
+        
         </ul>
     {% endfor %}
 {% endblock conteudo %}
