adciona imagem dos produtose serviços

--- a/produtos/templates/listagem_produtos.html
+++ b/produtos/templates/listagem_produtos.html
@@ -1,16 +1,23 @@
 {% extends 'templates/base.html' %}
 
 {% block conteudo %}
+    </style>
     Listagem de Produtos <a href="cadastrar">Novo produto</a>
     {% for produtos_do_vendedor in produtos_dos_vendedores %}
         <div>
             <h3>{{ produtos_do_vendedor.vendedor.nome }}</h3>
         </div>
-        <ul>
+    <ul>
         {% for produto in produtos_do_vendedor.produtos %}
-            <li> {{ produto.nome }} - R$ {{ produto.preco }} </li> <a href="{{ produto.id }}">Ver detalhes</a>
+            <li> 
+                {{ produto.nome }} - R$ {{ produto.preco }} 
+            </li> 
+            <a href="{{ produto.id }}">Ver detalhes</a>
+            {% if produto.imagem %}
+                <img src = {{ produto.imagem.url }} class = "imagem-produto"/>
+            {% endif %}
         {% endfor %}
-        </ul>
+    </ul>
         
     {% endfor %}
 {% endblock conteudo %}
