--- a/produtos/templates/listagem_servicos.html
+++ b/produtos/templates/listagem_servicos.html
@@ -9,6 +9,9 @@
         <ul>
         {% for servico in servico_do_vendedor.servicos %}
             <li> {{ servico.nome }} - R$ {{ servico.preco }}</li> 
+            {% if servico.imagem %}
+                <img src = {{ servico.imagem.url }} class = "imagem-produto"/>
+            {% endif %}
         {% endfor %}
         
         </ul>
