--- a/produtos_serviços/templates/base.html
+++ b/produtos_serviços/templates/base.html
@@ -1,5 +1,10 @@
 <html>
     <head>
+        <style>
+            .imagem-produto{
+                max-width: 80px;
+                max-heigth: 100px;
+            }
     </head>
     <body>
         {% include './menu.html'%}
